syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bole.zkpauth";
option java_outer_classname = "ZKPProto";
package zkp_auth;

message RegisterRequest {
  string user = 1;
  bytes y1 = 2;
  bytes y2 = 3;
}
message RegisterResponse {}
message AuthenticationChallengeRequest {
  string user = 1;
  bytes r1 = 2;
  bytes r2 = 3;
}
message AuthenticationChallengeResponse {
  string auth_id = 1;
  bytes c = 2;
}
message AuthenticationAnswerRequest {
  string auth_id = 1;
  bytes s = 2;
}
message AuthenticationAnswerResponse {
  string session_id = 1;
}
service Auth {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc CreateAuthenticationChallenge(AuthenticationChallengeRequest) returns
      (AuthenticationChallengeResponse) {}
  rpc VerifyAuthentication(AuthenticationAnswerRequest) returns (AuthenticationAnswerResponse){}
}